self-hosted-services/downloader/sftp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: downloader
  creationTimestamp: null
  labels:
    io.kompose.service: sftp
  name: sftp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sftp
  template:
    metadata:
      labels:
        io.kompose.service: sftp
        app: sftp
    spec:
      containers:
      - name: sftp
        image: docker.io/atmoz/sftp
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: no-nonsense-webdav-storage
          mountPath: /home/user/downloads
          subPath: downloads
        - name: no-nonsense-webdav-storage
          mountPath: /home/user/tv
          subPath: tv
        - name: stashplex
          mountPath: /home/user/plex
        - name: stashpiframe
          mountPath: /home/user/piframe
        ports:
        - containerPort: 22
      volumes:
      - name: no-nonsense-webdav-storage
        persistentVolumeClaim:
          claimName: downloader-pvc
      - name: stashplex
        hostPath:
          # Copied from QNAP migration.
          path: /stash/network-storage/qnap/Plex
          type: DirectoryOrCreate
      - name: stashpiframe
        hostPath:
          # Tempoary mount here
          path: /stash/network-storage/qnap/Photos/PiFrame/Photos
          type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: sftp-service
  namespace: downloader
spec:
  selector:
    app: sftp
  ports:
    - protocol: TCP
      port: 22222
      targetPort: 22
  type: LoadBalancer
